2003-01-07  Ulrich Drepper  <drepper@redhat.com>

	* math/libm-test.inc (significand_test): New function.
	(main): Call it.

2003-01-06  Roland McGrath  <roland@redhat.com>

	* sysdeps/i386/i486/bits/string.h (memset): Add parens around macro
	arguments.
	(memcpy, memrchr, strcpy, __stpcpy, strncpy, strcat): Likewise.
	(strcmp, strncat, strncmp, strchr, __strchrnul, strchrnul): Likewise.
	(index, strrchr, rindex, strcspn, strspn, strpbrk, strstr): Likewise.

	* string/tester.c (test_strcpy): Add test with `void *' arguments.

2003-01-06  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/fpu/s_significandl.c (__significandl): Really
	return significand and not the exponent.
	Reported by Nelson H. F. Beebe <beebe@math.utah.edu>.

	* elf/dl-misc.c (_dl_debug_vdprintf): Help PPC port by explicitly
	taking address of iov in INTERNAL_SYSCALL call.  Patch by Franz Sirl.

	* malloc/malloc.c: Mark all _int_* functions as static.

2003-01-06  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/alpha/sysdep.h (PSEUDO): Use PSEUDO_PREPARE_ARGS.
	* sysdeps/unix/sysv/linux/alpha/sigsuspend.S: Add cancellation
	handling.
	* sysdeps/unix/sysv/linux/alpha/select.S: Likewise.

2003-01-06  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	* sysdeps/powerpc/powerpc32/sysdep.h (PSEUDO_RET): Add branch hint.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/socket.S: Add cancellation
	support.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/syscalls.list: Remove
	ftruncate64, truncate64, pread64 and pwrite64 entries.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/sysdep.h
	(INLINE_SYSCALL): Add __builtin_expect.
	(LOADARGS_n): Add argument size safety checks.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/ftruncate64.c: New file.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/truncate64.c: New file.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/pread.c: New file.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/pread64.c: New file.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/pwrite.c: New file.